--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,6 @@
   "config": {
     "sort-packages": true
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
